--- a/index.html
+++ b/index.html
@@ -18,35 +18,35 @@
         
         <div class="buttons">
             <div class="row">
-                <button type="button" class="clear" onclick="clearAll()">c</button>
-                <button type="button" class="delete" onclick="deleteLast()">del</button>
+                <button type="button" class="clear" onclick="clearAll()" accesskey="c">c</button>
+                <button type="button" class="delete" onclick="deleteLast()" accesskey="backspace">del</button>
             </div>
             <div class="row">
-                <button type="button" class="numeric" onclick="numericButton('7')">7</button>
-                <button type="button" class="numeric" onclick="numericButton('8')">8</button>
-                <button type="button" class="numeric" onclick="numericButton('9')">9</button>
-                <button type="button" class="operator" onclick="operatorButton('/')">/</button>
-            </div>
-
-            <div class="row">
-                <button type="button" class="numeric" onclick="numericButton('4')">4</button>
-                <button type="button" class="numeric" onclick="numericButton('5')">5</button>
-                <button type="button" class="numeric" onclick="numericButton('6')">6</button>
-                <button type="button" class="operator" onclick="operatorButton('*')">*</button>
+                <button type="button" class="numeric" onclick="numericButton('7')" accesskey="7">7</button>
+                <button type="button" class="numeric" onclick="numericButton('8')" accesskey="8">8</button>
+                <button type="button" class="numeric" onclick="numericButton('9')" accesskey="9">9</button>
+                <button type="button" class="operator" onclick="operatorButton('/')" accesskey="/">/</button>
             </div>
 
             <div class="row">
-                <button type="button" class="numeric" onclick="numericButton('1')">1</button>
-                <button type="button" class="numeric" onclick="numericButton('2')">2</button>
-                <button type="button" class="numeric" onclick="numericButton('3')">3</button>
-                <button type="button" class="operator" onclick="operatorButton('+')">+</button>
+                <button type="button" class="numeric" onclick="numericButton('4')" accesskey="4">4</button>
+                <button type="button" class="numeric" onclick="numericButton('5')" accesskey="5">5</button>
+                <button type="button" class="numeric" onclick="numericButton('6')" accesskey="6">6</button>
+                <button type="button" class="operator" onclick="operatorButton('*')" accesskey="*">*</button>
             </div>
 
             <div class="row">
-                <button type="button" class="numeric" onclick="numericButton('0')">0</button>
-                <button type="button" class="numeric" onclick="dotButton()">.</button>
-                <button type="button" class="equal" onclick="equals()">=</button>
-                <button type="button" class="operator" onclick="operatorButton('-')">-</button>
+                <button type="button" class="numeric" onclick="numericButton('1')" accesskey="1">1</button>
+                <button type="button" class="numeric" onclick="numericButton('2')" accesskey="2">2</button>
+                <button type="button" class="numeric" onclick="numericButton('3')" accesskey="3">3</button>
+                <button type="button" class="operator" onclick="operatorButton('+')" accesskey="+">+</button>
+            </div>
+
+            <div class="row">
+                <button type="button" class="numeric" onclick="numericButton('0')" accesskey="0">0</button>
+                <button type="button" class="numeric" onclick="dotButton()" accesskey=".">.</button>
+                <button type="button" class="equal" onclick="equals()" accesskey="=">=</button>
+                <button type="button" class="operator" onclick="operatorButton('-')" accesskey="-">-</button>
             </div>
         </div>
     </div>
