added number inversion button

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <div class="buttons">
             <div class="row">
                 <button type="button" class="btn clear" onclick="clearAll()" accesskey="c">c</button>
+                <button type="button" class="btn numeric" onclick="invertLastNum()">+/-</button>
                 <button type="button" class="btn delete" onclick="deleteLast()" accesskey="backspace">del</button>
             </div>
             <div class="row">
